[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.9.2",
    "cmake>=3.13",
    "scikit-build>=0.14.1",
]

build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = [
  "_skbuild/macosx-10.16-x86_64-3.8/cmake-install/src",
  "_skbuild/linux-x86_64-3.9/setuptools/lib/"
]